--- a/functions/.project
+++ b/functions/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>functions-module2</name>
+	<name>functions</name>
 	<comment></comment>
 	<projects>
 	</projects>
