Fix: project names

--- a/module3-types_classes_functs/.project
+++ b/module3-types_classes_functs/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>types_classes_functs</name>
+	<name>module3-types_classes_functs</name>
 	<comment></comment>
 	<projects>
 	</projects>
